@@ -3,6 +3,7 @@
 MAXHEAP="8g"
 OS_ARGS=""
 OTHER_ARGS=""
+#OTHER_ARGS="-XX:+UseConcMarkSweepGC"
 
 if [ `uname` == "Darwin" ]; then
     OS_ARGS="-Xdock:icon=toolkits/icons/bulbs/bulb_128.png -Xdock:name=LightSide"
