@@ -10,7 +10,9 @@
 MAXHEAP="4g"
 OS_ARGS=""
 #OTHER_ARGS=""
+#OTHER_ARGS="-XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -Djava.awt.headless=true"
 OTHER_ARGS="-Djava.awt.headless=true"
+
 
 MAIN_CLASS="edu.cmu.side.recipe.Chef"
 
